# 02-higherorder

./: .hlint.yaml  CHANGELOG.md  Foldr.hs  HigherOrder.hs  README.md  SecretCode.hs  Sum.hs  cis5520-higherorder.cabal  stack.yaml
